--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,51 @@
-site_name: My Docs
+site_name: FSHARP_TEMPLATE
+
+site_url: https://readthedocs.org/projects/FSHARP_TEMPLATE/
+#repo_url: https://github.com/Release-Candidate/FSHARP_TEMPLATE
+#repo_name: GitHub
+#copyright: (C) 2021 Roland Csaszar
+
+docs_dir: docs
+site_dir: site
 
 nav:
   - Home: index.md
-  - About: about.md
+  - Project Links:
+    - 'GitHub Project Page': 'https://github.com/Release-Candidate/FSHARP_TEMPLATE'
+    - 'Nuget Package': 'https://pypi.org/project/FSHARP_TEMPLATE/'
+    - 'Report a Bug or a Feature Request': 'https://github.com/Release-Candidate/FSHARP_TEMPLATE/issues/new/choose'
+    - 'Issue Tracker at GitHub': 'https://github.com/Release-Candidate/FSHARP_TEMPLATE/issues'
+  - 'Installation & Usage':
+    - Usage: usage.md
+    - License: license.md
+  - Contributing:
+    - Contributing: contributing.md
 
-theme: readthedocs
+
+theme:
+    name: readthedocs
+    prev_next_buttons_location: both
+    navigation_depth: 8
+    collapse_navigation: False
+
+markdown_extensions:
+    - markdown.extensions.fenced_code
+    - markdown.extensions.meta
+    - markdown.extensions.smarty
+    - markdown.extensions.admonition
+    - markdown.extensions.def_list
+    - markdown.extensions.attr_list
+    - markdown.extensions.abbr
+    - markdown.extensions.footnotes
+    - markdown.extensions.codehilite:
+        guess_lang: False
+        noclasses: True
+        pygments_style: emacs
+    - markdown.extensions.tables
+    - markdown.extensions.nl2br
+    - markdown.extensions.sane_lists
+    - markdown.extensions.toc:
+        permalink: True
+
+plugins:
+  - search
