Added Latex support

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,9 @@ theme:
     collapse_navigation: False
     style_nav_header_background: "#5DB1DE"
 
+extra_javascript:
+    - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+
 markdown_extensions:
     - markdown.extensions.fenced_code
     - markdown.extensions.meta
@@ -47,6 +50,7 @@ markdown_extensions:
     - markdown.extensions.sane_lists
     - markdown.extensions.toc:
         permalink: True
+    - mdx_math
 
 plugins:
   - search
