--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run Tests
         run: |
           cd $GITHUB_WORKSPACE
-           fake run .\build.fsx target TestsCoverage
+          dotnet fake run .\build.fsx target TestsCoverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
@@ -64,17 +64,16 @@ jobs:
         run: dotnet tool restore
 
       - name: Run Tests ${{ matrix.python-version }}
-        run: |
+        run:  |
           cd $GITHUB_WORKSPACE
-          rm -rf tzolkin_calendar/
-          pipenv run pytest --hypothesis-show-statistics --cov=./ --cov-report=xml
+          dotnet fake run .\build.fsx target TestsCoverage
 
       - name: Upload coverage to Codecov ${{ matrix.python-version }}
         uses: codecov/codecov-action@v1
         if: ${{ always() }}
         with:
           token: ${{ secrets.CODECOV_SECRET }}
-          files: ./coverage.xml
+          files: ./tests/TestsTemplate/coverage.xml
           directory: ./coverage/reports/
           # flags: unittest
           env_vars: OS,PYTHON
