--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run Tests
         run: |
           cd $GITHUB_WORKSPACE
-          dotnet fake run .\build.fsx target TestsCoverage
+          dotnet fake run ./build.fsx target TestsCoverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
@@ -66,7 +66,7 @@ jobs:
       - name: Run Tests ${{ matrix.python-version }}
         run:  |
           cd $GITHUB_WORKSPACE
-          dotnet fake run .\build.fsx target TestsCoverage
+          dotnet fake run ./build.fsx target TestsCoverage
 
       - name: Upload coverage to Codecov ${{ matrix.python-version }}
         uses: codecov/codecov-action@v1
