--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -31,8 +31,8 @@ jobs:
         run: dotnet tool restore
 
       - name: Run Tests
+        shell: cmd
         run:  |
-          cd $GITHUB_WORKSPACE
           dotnet fake run .\build.fsx target TestsCoverage
 
       - name: Upload coverage to Codecov
@@ -65,7 +65,6 @@ jobs:
 
       - name: Run Tests
         run:  |
-          cd $GITHUB_WORKSPACE
           dotnet fake run .\build.fsx target TestsCoverage
 
       - name: Upload coverage to Codecov
