Added Nuget package action

--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: [main]
   workflow_run:
-    workflows: ["Pip Package"]
+    workflows: ["Nuget Packages"]
     types: [completed]
 
   # Allows you to run this workflow manually from the Actions tab
