--- a/.github/workflows/create_packages.yml
+++ b/.github/workflows/create_packages.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Upload
         run: |
           cd $GITHUB_WORKSPACE
-          dotnet fake run ./build.fsx target Upload
+          dotnet nuget push foo.nupkg -k${{ secrets.NUGET_PACKAGE }} -s https://api.nuget.org/v3/index.json
 
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
