Added Fake arguments

--- a/.github/workflows/fsharplint.yml
+++ b/.github/workflows/fsharplint.yml
@@ -1,3 +1,12 @@
+#!/bin/sh
+# SPDX-License-Identifier: MIT
+# Copyright (C) 2021 Roland Csaszar
+#
+# Project:  FSHARP_TEMPLATE
+# File:     fsharplint.yml
+#
+################################################################################
+
 name: FsharpLint
 
 on: [push, pull_request]
