--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,3 +1,13 @@
+#!/bin/sh
+# SPDX-License-Identifier: MIT
+# Copyright (C) 2021 Roland Csaszar
+#
+# Project:  FSHARP_TEMPLATE
+# File:     linux.yml
+#
+################################################################################
+
+
 name: Ubuntu 20.04
 
 # Controls when the action will run.
