--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -1,3 +1,12 @@
+#!/bin/sh
+# SPDX-License-Identifier: MIT
+# Copyright (C) 2021 Roland Csaszar
+#
+# Project:  FSHARP_TEMPLATE
+# File:     linux_test.yml
+#
+################################################################################
+
 name: Tests Ubuntu 20.04
 
 # Controls when the action will run.
