--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,3 +1,12 @@
+#!/bin/sh
+# SPDX-License-Identifier: MIT
+# Copyright (C) 2021 Roland Csaszar
+#
+# Project:  FSHARP_TEMPLATE
+# File:     windows.yml
+#
+################################################################################
+
 name: Windows 2019
 
 # Controls when the action will run.
