--- a/.github/workflows/create_packages.yml
+++ b/.github/workflows/create_packages.yml
@@ -13,6 +13,10 @@ on:
   release:
     types: [created]
 
+  push:
+    tags:
+      - 'v*.*.*'
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
