--- a/.github/workflows/create_packages.yml
+++ b/.github/workflows/create_packages.yml
@@ -74,7 +74,7 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
           ${{ github.ref }}
-          dotnet fake run ./build.fsx target Packages ${{ steps.tagName.outputs.tag }}
+          dotnet fake run ./build.fsx target Packages $GIT_TAG_NAME
 
       - name: Upload
         run: |
