--- a/.github/workflows/create_packages.yml
+++ b/.github/workflows/create_packages.yml
@@ -75,6 +75,14 @@ jobs:
           cd $GITHUB_WORKSPACE
           dotnet fake run ./build.fsx target Packages $GIT_TAG_NAME
 
+      - name: Release to GitHub
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: ./packages/*.nupkg
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Upload
         run: |
           cd $GITHUB_WORKSPACE
