--- a/.github/workflows/create_packages.yml
+++ b/.github/workflows/create_packages.yml
@@ -79,6 +79,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
+          name: Version $GIT_TAG_NAME
+          body_path: CHANGELOG.md
           files: ./packages/*.nupkg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
