--- a/.github/workflows/create_packages.yml
+++ b/.github/workflows/create_packages.yml
@@ -79,7 +79,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: Version $GIT_TAG_NAME
+          name: Version ${{ env.GIT_TAG_NAME }}
           body_path: CHANGELOG.md
           files: ./packages/*.nupkg
         env:
