--- a/.github/workflows/create_packages.yml
+++ b/.github/workflows/create_packages.yml
@@ -85,6 +85,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      #- name: Release NuGet to GitHub
+      #  uses: svenstaro/upload-release-action@v2
+      #  if: startsWith(github.ref, 'refs/tags/')
+      #  with:
+      #    release_name: Version ${{ env.GIT_TAG_NAME }}
+      #    repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #    tag: ${{ github.ref }}
+      #    file_glob: false
+      #    asset_name: NuGet Package
+      #    file: ./packages/FSHARP_TEMPLATE.nupkg
+
       - name: Upload
         run: |
           cd $GITHUB_WORKSPACE
@@ -149,7 +160,7 @@ jobs:
 
       - name: Publish Executable
         run: |
-          dotnet fake run build.fsx target Publish
+          dotnet fake run build.fsx target Publish $GIT_TAG_NAME
 
       - name: Release DLLs to GitHub
         uses: svenstaro/upload-release-action@v2
@@ -157,8 +168,9 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref }}
-          file_glob: true
-          file: ./bin/*.dll
+          file_glob: false
+          asset_name: FSHARP_TEMPLATE DLL ${{ runner.os }}
+          file: ./bin/LibTemplate.dll
 
       - name: Release Exes to GitHub
         uses: svenstaro/upload-release-action@v2
@@ -166,8 +178,9 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref }}
-          file_glob: true
-          file: ./bin/*.exe
+          asset_name: FSHARP_TEMPLATE ${{ runner.os }}
+          file_glob: False
+          file: ./bin/FSHARP_TEMPLATE.exe
 
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
