--- a/.github/workflows/create_packages.yml
+++ b/.github/workflows/create_packages.yml
@@ -75,12 +75,17 @@ jobs:
           cd $GITHUB_WORKSPACE
           dotnet fake run ./build.fsx target Packages $GIT_TAG_NAME
 
+      - name: Generate Changelog
+        run: |
+            cd $GITHUB_WORKSPACE
+            ./get_changelog.sh > first_changelog.md
+
       - name: Release to GitHub
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           name: Version ${{ env.GIT_TAG_NAME }}
-          body_path: CHANGELOG.md
+          body_path: first_changelog.md
           files: ./packages/*.nupkg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -169,18 +174,18 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref }}
           file_glob: false
-          asset_name: FSHARP_TEMPLATE DLL ${{ runner.os }}
+          asset_name: FSHARP_TEMPLATE-${{ runner.os }}.dll
           file: ./bin/LibTemplate.dll
 
-      - name: Release Exes to GitHub
-        uses: svenstaro/upload-release-action@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ github.ref }}
-          asset_name: FSHARP_TEMPLATE ${{ runner.os }}
-          file_glob: False
-          file: ./bin/FSHARP_TEMPLATE.exe
+      #- name: Release Exes to GitHub
+      #  uses: svenstaro/upload-release-action@v2
+      #  if: startsWith(github.ref, 'refs/tags/')
+      #  with:
+      #    repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #    tag: ${{ github.ref }}
+      #    asset_name: FSHARP_TEMPLATE ${{ runner.os }}
+      #    file_glob: False
+      #    file: ./bin/FSHARP_TEMPLATE.exe
 
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
